--- a/Common/Languages/Russian/DefInjected/ThingDef/Effecter_PawnStates.xml
+++ b/Common/Languages/Russian/DefInjected/ThingDef/Effecter_PawnStates.xml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <GR_FleshFliesGas.label>flesh flies</GR_FleshFliesGas.label>
+  <GR_FleshFliesGas.label>плотоядные мухи</GR_FleshFliesGas.label>
+  <!-- EN: -->
 
 
 </LanguageData>
