--- a/Common/Languages/Russian/DefInjected/ThingDef/Buildings_Natural.xml
+++ b/Common/Languages/Russian/DefInjected/ThingDef/Buildings_Natural.xml
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
-
+  
+  <!-- EN:
   <GR_FleshGrowth_Building.label>flesh growth</GR_FleshGrowth_Building.label>
   <GR_FleshGrowth_Building.description>Something went terribly wrong. A huge and weird growth has spawned within the electrowomb, breaking it completely and spreading all around. This growth is a hatchery for small flies that can devour any living creature to the bone. It seems to be sensitive to daylight, but no one knows how far it can spread at night.</GR_FleshGrowth_Building.description>
+   -->
+  <GR_FleshGrowth_Building.label>мясная опухоль</GR_FleshGrowth_Building.label>
+  <GR_FleshGrowth_Building.description>Что-то пошло очень сильно не так. Внутри электроматки образовалась масса плоти, которая вскоре вырвалась наружу. Внутри этой массы копошатся тысячи личинок плотоядных мушек, способных отделить плоть любого живого существа от костей. Эта плоть чувствительна к воздействию света, но никто не может сказать наверняка, как далеко она сможет разрастись за ночь.</GR_FleshGrowth_Building.description>
 
 
 </LanguageData>
