--- a/Common/Languages/Russian/DefInjected/ThingDef/Items_Resource_GrowthCells.xml
+++ b/Common/Languages/Russian/DefInjected/ThingDef/Items_Resource_GrowthCells.xml
@@ -1,11 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <GR_GrowthCell.label>growth cell</GR_GrowthCell.label>
-  <GR_GrowthCell.description>A portable, human-made casing designed to hold an embryo until it is transferred to a relevant Electrowomb, similar to fertilized eggs that require incubation. The embryonic fluid is unstable due to the unnatural genetic combination, so it will need to be implanted within 7 days after its creation. This growth cell has to be kept at a temperature between 0 and 50 degrees Celsius.</GR_GrowthCell.description>
+  <GR_GrowthCell.label>искусственная яйцеклетка</GR_GrowthCell.label>
+  <GR_GrowthCell.description>Портативный контейнер, необходимый для поддержания жизнеспособности эмбриона, пока тот не будет помещён в подходящую электроматку. В целом этот процесс напоминает инкубацию яиц. Из-за особенностей создания данная яйцеклетка является нестабильной и должна быть помещена в энергоматку не позднее 7 дней после создания. Способна выдерживать температуру от 0 до 50 градусов Цельсия.</GR_GrowthCell.description>
+  <!-- EN:<GR_GrowthCell.label>growth cell</GR_GrowthCell.label>
+  <GR_GrowthCell.description>A portable, human-made casing designed to hold an embryo until it is transferred to a relevant Electrowomb, similar to fertilized eggs that require incubation. The embryonic fluid is unstable due to the unnatural genetic combination, so it will need to be implanted within 7 days after its creation. This growth cell has to be kept at a temperature between 0 and 50 degrees Celsius.</GR_GrowthCell.description> -->
 
-  <GR_ArchoGrowthcell.label>archotech growth cell</GR_ArchoGrowthcell.label>
-  <GR_ArchoGrowthcell.description>A portable, archotech-made casing designed to hold an embryo until it is transferred to a relevant Electrowomb, similar to fertilized eggs that require incubation. This particular one is completely stable and contains the embryo of an Archocentipede, which can only grow in an Archowomb.\n\nCare should be taken before beginning the process, as the resulting energy signature will force any and all hostiles to attack the colony before the monstrosity can be born.</GR_ArchoGrowthcell.description>
+  <GR_ArchoGrowthcell.label>искусственная яйцеклетка архотехов</GR_ArchoGrowthcell.label>
+  <GR_ArchoGrowthcell.description>Портативный контейнер, необходимый для поддержания жизнеспособности эмбриона, пока тот не будет помещён в подходящую электроматку. В целом этот процесс напоминает инкубацию яиц. Данный тип яйцеклеток полностью стабилен и содержит в себе эмбрион Архосентипеды, которая может быть выращена только в архоэлектроматке.\n\nК запуску процесса инкубации архосентипеды следует подходить с особой осторожностью, так как энергетические сигнатуры привлекут внимание всех возможных врадждебных групп прежде, чем это чудовище появится на свет.</GR_ArchoGrowthcell.description>
+  <!-- EN:<GR_ArchoGrowthcell.label>archotech growth cell</GR_ArchoGrowthcell.label>
+  <GR_ArchoGrowthcell.description>A portable, archotech-made casing designed to hold an embryo until it is transferred to a relevant Electrowomb, similar to fertilized eggs that require incubation. This particular one is completely stable and contains the embryo of an Archocentipede, which can only grow in an Archowomb.\n\nCare should be taken before beginning the process, as the resulting energy signature will force any and all hostiles to attack the colony before the monstrosity can be born.</GR_ArchoGrowthcell.description> -->
 
 
 </LanguageData>
