--- a/Common/Languages/Russian/DefInjected/ThingDef/Races_Animal_UrsineHybrids.xml
+++ b/Common/Languages/Russian/DefInjected/ThingDef/Races_Animal_UrsineHybrids.xml
@@ -1,67 +1,106 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
   <!-- Bear - Boomalope -->
 
-  <GR_Bearalope.label>bearalope</GR_Bearalope.label>
+  <GR_Bearalope.label>медвелопа</GR_Bearalope.label>
+  <GR_Bearalope.description>Причиной для создания столь необычного сочетания особенностей организма послужил особый заказ от клиента, одержимого страстью взрывать всё подряд. За это он получил прозвище Бум-Бум, так как его правки по техзаданиям часто выглядели следующим образом: «еще больше бум мне пофиг».\n\nМедвежий гибрид с рецессивными генами бумалопы. Уступает медведю в плане интеллекта, физической силы и охотничьих качеств, но способен усилием воли взорвать некоторое количество химтопливных мешков, что делает его более универсальным в бою, ценой собственного здоровья.\n\n&lt;color=#E5E54C&gt;Gameplay effect:&lt;/color&gt; Все гибриды с медвежьими генами обладают способностью к оглушающим атакам. Способность "подорвать химтопливо" может быть использована для нанесения минно-взрывных ранений. Имейте в виду, что урон будет нанесён и самому гибриду.</GR_Bearalope.description>
+  <GR_Bearalope.tools.0.label>когти на левой лапе</GR_Bearalope.tools.0.label>
+  <GR_Bearalope.tools.1.label>когти на правой лапе</GR_Bearalope.tools.1.label>
+  <GR_Bearalope.tools.3.label>голова</GR_Bearalope.tools.3.label>
+
+  <!-- EN:<GR_Bearalope.label>bearalope</GR_Bearalope.label>
   <GR_Bearalope.description>An unusual concoction of traits that was favoured by a particular client who was obsessed on making things explode. Earned the nickname Boom-Boom as they would often make requests along the lines of “two more booms, wasn’t paying attention”.\n\nAn ursine hybrid with recessive boomalope genes. Lacking intelligence compared to a bear while also missing out on some strength and confidence in hunting. However, they can be commanded to detonate a limited amount of fuel sacks for increased combat versatility in exchange for hurting themselves intentionally.\n\n&lt;color=#E5E54C&gt;Gameplay effect:&lt;/color&gt; All primary bear hybrids have stun attacks. The "Detonate chemfuel" ability can be used to cause a powerful "Bomb" damage type explosion surrounding the hybrid. Bear in mind (pun intended) that this will damage the hybrid too!</GR_Bearalope.description>
   <GR_Bearalope.tools.0.label>left claw</GR_Bearalope.tools.0.label>
   <GR_Bearalope.tools.1.label>right claw</GR_Bearalope.tools.1.label>
-  <GR_Bearalope.tools.3.label>head</GR_Bearalope.tools.3.label>
+  <GR_Bearalope.tools.3.label>head</GR_Bearalope.tools.3.label> -->
+
 
 
   <!-- Bear - Chicken -->
 
-  <GR_Bearchicken.label>bearchicken</GR_Bearchicken.label>
+  <GR_Bearchicken.label>медвецып</GR_Bearchicken.label>
+  <GR_Bearchicken.description>Удивительно чистоплотное животное, получившее неофициальное название «Совиный медведь» из-за того, как эти существа иногда могут пытаться взлететь, хлопая рудиментарными крыльями. Это конечно может выглядеть забавно, но ровно до того момента, пока этот самый совиный медведь не выклюет вам глаза и не растопчет вас своими массивными лапами.\n\nМедвежий гибрид с рецессивными генами пернатых. Не такой умный как медведь, но значительно легче поддаётся дрессировке. Медвецыпы несутся каждые два дня и более чем способны защитить свою кладку от посягательств. Уступает медведю в скорости, но может порхать над небольшими препятствиями, что облегчает их передвижение по пересечёной местности.\n\n&lt;color=#E5E54C&gt;Влияние на игровой процесс:&lt;/color&gt; Все гибриды с медвежьими генами обладают способностью к оглушающим атакам. Хотя медвецып и обладает слишком высокой массой тела для нормального полёта, его крылья все ещё дают ему возможность не обращать внимания на пересечённую местность.</GR_Bearchicken.description>
+  <GR_Bearchicken.tools.0.label>когти на левой лапе</GR_Bearchicken.tools.0.label>
+  <GR_Bearchicken.tools.1.label>когти на правой лапе</GR_Bearchicken.tools.1.label>
+  <GR_Bearchicken.tools.3.label>голова</GR_Bearchicken.tools.3.label>
+
+  <!-- EN:<GR_Bearchicken.label>bearchicken</GR_Bearchicken.label>
   <GR_Bearchicken.description>A surprisingly clean animal dubbed the “owl-bear” by those that find them amusing as they attempt to fly by rapidly flapping their stubby vestigial wings. That is until they get their eyes pecked out and flattened by their weight.\n\nAn ursine hybrid with recessive avian genes. Slightly dumber but easier to train, they lay eggs every couple of days and have the strength to protect their clutch. Slower than a bear but their ability to hover over terrain means they perform better in harsh terrain.\n\n&lt;color=#E5E54C&gt;Gameplay effect:&lt;/color&gt; All primary bear hybrids have stun attacks. Although too heavy to fly, it can use its wings to nullify terrain movement costs.</GR_Bearchicken.description>
   <GR_Bearchicken.tools.0.label>left claw</GR_Bearchicken.tools.0.label>
   <GR_Bearchicken.tools.1.label>right claw</GR_Bearchicken.tools.1.label>
-  <GR_Bearchicken.tools.3.label>head</GR_Bearchicken.tools.3.label>
+  <GR_Bearchicken.tools.3.label>head</GR_Bearchicken.tools.3.label> -->
 
 
   <!-- Bear - Muffalo -->
 
-  <GR_Bearffalo.label>bearffalo</GR_Bearffalo.label>
-  <GR_Bearffalo.description>A wonderful animal for those cold winter journeys, very popular as travellers snuggle into their fur at night to keep warm. Fights have even broken out over who gets to sleep with the oversized rug.\n\nAn ursine hybrid with recessive muffalo genes. Very filthy but a decently intelligent pack animal that produces good-quality wool and milk. Performs very well in cold environments and is more than capable of defending itself.\n\n&lt;color=#E5E54C&gt;Gameplay effect:&lt;/color&gt; All primary bear hybrids have stun attacks.</GR_Bearffalo.description>
-  <GR_Bearffalo.tools.0.label>left claw</GR_Bearffalo.tools.0.label>
-  <GR_Bearffalo.tools.1.label>right claw</GR_Bearffalo.tools.1.label>
-  <GR_Bearffalo.tools.3.label>head</GR_Bearffalo.tools.3.label>
+  <GR_Bearffalo.label>медвеффало</GR_Bearffalo.label>
+  <GR_Bearffalo.description>Замечательное животное для долгих путешествий зимой. Ценится путешественниками за их мех, который может легко скрыть взрослого человека и помочь ему переждать холодную зиму. Известны случаи, когда возникали серьёзные конфликты за право спать в шерсти медвеффало, порой эти конфликты доходили до драки.\n\nМедвежий гибрид с рецессивными генами муффало. Очень грязное, но умное вьючное животное, способное производить высококачественную шерсть и молоко. Отлично себя чувствует в условиях холодного климата и более чем способно защитить себя.\n\n&lt;color=#E5E54C&gt;Влияние на игровой процесс:&lt;/color&gt; Все гибриды с медвежьими генами обладают способностью к оглушающим атакам.</GR_Bearffalo.description>
+  <GR_Bearffalo.tools.0.label>когти на левой лапе</GR_Bearffalo.tools.0.label>
+  <GR_Bearffalo.tools.1.label>когти на правой лапе</GR_Bearffalo.tools.1.label>
+  <GR_Bearffalo.tools.3.label>голова</GR_Bearffalo.tools.3.label>
+
+  <!-- EN:<GR_Bearchicken.label>bearchicken</GR_Bearchicken.label>
+  <GR_Bearchicken.description>A surprisingly clean animal dubbed the “owl-bear” by those that find them amusing as they attempt to fly by rapidly flapping their stubby vestigial wings. That is until they get their eyes pecked out and flattened by their weight.\n\nAn ursine hybrid with recessive avian genes. Slightly dumber but easier to train, they lay eggs every couple of days and have the strength to protect their clutch. Slower than a bear but their ability to hover over terrain means they perform better in harsh terrain.\n\n&lt;color=#E5E54C&gt;Gameplay effect:&lt;/color&gt; All primary bear hybrids have stun attacks. Although too heavy to fly, it can use its wings to nullify terrain movement costs.</GR_Bearchicken.description>
+  <GR_Bearchicken.tools.0.label>left claw</GR_Bearchicken.tools.0.label>
+  <GR_Bearchicken.tools.1.label>right claw</GR_Bearchicken.tools.1.label>
+  <GR_Bearchicken.tools.3.label>head</GR_Bearchicken.tools.3.label> -->
 
 
   <!-- Bear - Wolf -->
 
-  <GR_Bearwolf.label>bearwolf</GR_Bearwolf.label>
+  <GR_Bearwolf.label>медвеволк</GR_Bearwolf.label>
+  <GR_Bearwolf.description>Следует дважды подумать, прежде чем заводить себе этого крепыша, так как их с их метаболизмом может сравниться разве что их свирепость и проворность. Впрочем, эти качества делают их идеальными для тех ситуаций, когда нужен контроль за численностью яйцекладущих существ.\n\nМедвежий гибрид с рецессивными собачьими генами. Свирепый и умный боевой гибрид с непомерным аппетитом. Поскольку они почти постоянно голодны, они будут выкапывать ягоды при подходящих для этого условиях.\n\n&lt;color=#E5E54C&gt;Влияние на игровой процесс:&lt;/color&gt; Все гибриды с медвежьими генами обладают способностью к оглушающим атакам.</GR_Bearwolf.description>
+  <GR_Bearwolf.tools.0.label>когти на левой лапе</GR_Bearwolf.tools.0.label>
+  <GR_Bearwolf.tools.1.label>когти на правой лапе</GR_Bearwolf.tools.1.label>
+  <GR_Bearwolf.tools.3.label>голова</GR_Bearwolf.tools.3.label>
+  <!-- EN:<GR_Bearwolf.label>bearwolf</GR_Bearwolf.label>
   <GR_Bearwolf.description>Great care must be taken before considering raising this chonky boy, as they have a metabolism that matches their high ferocity and movement speed. Pretty useful in keeping egg-laying animal populations in check.\n\nAn ursine hybrid with recessive canine genes. A very fierce and intelligent combat hybrid with an incredible appetite. As they are almost constantly hungry, they will dig for berries when they’re hungry provided it’s growing season.\n\n&lt;color=#E5E54C&gt;Gameplay effect:&lt;/color&gt; All primary bear hybrids have stun attacks.</GR_Bearwolf.description>
-  <GR_Bearwolf.tools.0.label>left claw</GR_Bearwolf.tools.0.label>
-  <GR_Bearwolf.tools.1.label>right claw</GR_Bearwolf.tools.1.label>
-  <GR_Bearwolf.tools.3.label>head</GR_Bearwolf.tools.3.label>
+  <GR_Bearwolf.tools.0.label>left claw</GR_Bearwolf.tools -->
 
 
   <!-- Bear - Rodent -->
 
-  <GR_Bearmole.label>bearmole</GR_Bearmole.label>
+  <GR_Bearmole.label>медвекрот</GR_Bearmole.label>
+  <GR_Bearmole.description>Немногие вживую видели лысого медведя и ещё меньше среди них тех, кто хотел бы увидеть такое снова. Этот кротокрыс-переросток легко может напугать своими крупными зубами, но куда чаще вызывает умиление и оказывается окружён любовью со стороны тех, кто мечтает видеть у себя дома огромное лысое существо, грызущее мебель.\n\nМедвежий гибрид с рецессивными генами грызуна. Сильно ограничен в умственном и физическом плане, а также в том, что касается его рациона. Свиреп в бою и почти нечувствителен к боли. Из дополнительных преимуществ: имеет сравнительно короткий цикл размножения, низкий метаболизм и почти полностью бесстрашен во время охоты.\n\n&lt;color=#E5E54C&gt;Влияние на игровой процесс:&lt;/color&gt; Все гибриды с медвежьими генами обладают способностью к оглушающим атакам. Отсутствует чувствительность к боли. Не может потерять сознание из-за травматического шока.</GR_Bearmole.description>
+  <GR_Bearmole.tools.0.label>когти на левой лапе</GR_Bearmole.tools.0.label>
+  <GR_Bearmole.tools.1.label>когти на правой лапе</GR_Bearmole.tools.1.label>
+  <GR_Bearmole.tools.3.label>голова</GR_Bearmole.tools.3.label>
+  <!-- EN:<GR_Bearmole.label>bearmole</GR_Bearmole.label>
   <GR_Bearmole.description>Not many people get to see a naked bear, and fewer still want a repeat viewing. This oversized mole-rat inspires plenty of fear with its massive teeth, but gets a lot of love and affection from those wanting a large, hairless pet that gnaws on the furniture.\n\nAn ursine hybrid with recessive rodent genes. Very slow both mentally and physically along with dietary restrictions, but very fierce in combat and immune to pain. Also they have the added benefit of having a short reproductive cycle, low metabolism and being completely fearless in hunting prey.\n\n&lt;color=#E5E54C&gt;Gameplay effect:&lt;/color&gt; All primary bear hybrids have stun attacks. No pain sensitivity. This hybrid won't be knocked down in combat due to pain.</GR_Bearmole.description>
   <GR_Bearmole.tools.0.label>left claw</GR_Bearmole.tools.0.label>
   <GR_Bearmole.tools.1.label>right claw</GR_Bearmole.tools.1.label>
-  <GR_Bearmole.tools.3.label>head</GR_Bearmole.tools.3.label>
+  <GR_Bearmole.tools.3.label>head</GR_Bearmole.tools.3.label> -->
 
 
   <!-- Bear - Cat -->
 
-  <GR_Bearcat.label>bearcat</GR_Bearcat.label>
+  <GR_Bearcat.label>медвекот</GR_Bearcat.label>
+  <GR_Bearcat.description>Здоровенные пушистые убийцы - так часто называют этих «милых» животных, поскольку их единственный недостаток заключается в том, что они неспособны мурчать. Из-за своих размеров они часто сбивают с ног и укладываются сверху, согревая своим мехом тех, кому пытаются показать свою любовь и привязанность.\n\nМедвежий гибрид с рецессивными кошачьими генами. Умные и быстрые в бою, эти животные являются крайне милыми и ласковыми машинами для убийства. они предпочитают выбирать в качестве добычи существ, уступающих им по размерам. Также их можно разводить ради их ценных шкур, если быть чудовищем для вас абсолютно нормально.\n\n&lt;color=#E5E54C&gt;Влияние на игровой процесс:&lt;/color&gt; Все гибриды с медвежьими генами обладают способностью к оглушающим атакам. Как и прочие кошачьи гибриды Как и остальные кошачьи гибриды, они опасны в ближнем бою за счёт способности к уклонению, что делает их идеальным выбором для передовой. Кроме того они будут ластиться к поселенцам, повышая их настроение. Их шкура может быть продана, либо использована для создания ковриков.</GR_Bearcat.description>
+  <GR_Bearcat.tools.0.label>когти на левой лапе</GR_Bearcat.tools.0.label>
+  <GR_Bearcat.tools.1.label>когти на правой лапе</GR_Bearcat.tools.1.label>
+  <GR_Bearcat.tools.3.label>голова</GR_Bearcat.tools.3.label>
+
+  <!-- EN: <GR_Bearcat.label>bearcat</GR_Bearcat.label>
   <GR_Bearcat.description>Massive, fluffy murder babies is just one of the many “cute” nicknames made for this animal, their only downside being that they’re unable to purr. Because they’re so large, they often end up knocking over the people they’re trying to show affection to before laying on top of them for warmth.\n\nAn ursine hybrid with recessive feline genes. Retaining their intelligence and being faster and more fierce in combat, they are adorable killing machines that love to nuzzle. They prefer easier prey and can be slaughtered for a valuable pelt, you monster.\n\n&lt;color=#E5E54C&gt;Gameplay effect:&lt;/color&gt; All primary bear hybrids have stun attacks. Like all cat hybrids, they have an improved melee dodge ability and a short nuzzle period. The pelt can be sold or used in the art workbench to create rugs.</GR_Bearcat.description>
   <GR_Bearcat.tools.0.label>left claw</GR_Bearcat.tools.0.label>
   <GR_Bearcat.tools.1.label>right claw</GR_Bearcat.tools.1.label>
-  <GR_Bearcat.tools.3.label>head</GR_Bearcat.tools.3.label>
+  <GR_Bearcat.tools.3.label>head</GR_Bearcat.tools.3.label> -->
 
 
   <!-- Bear - Humanoid -->
 
-  <GR_Bearman.label>bearman</GR_Bearman.label>
+  <GR_Bearman.label>медвовек</GR_Bearman.label>
+  <GR_Bearman.description>В результате слияния чистой мощи медведя и человеческого интеллекта получилось поистине ужасающее существо, которое обожает истязать свою добычу. Не слишком силён из-за странной формы лап, напоминающей кисти рук человека, этот гибрид компенсирует физическую силу избытком энергии и способностью схватить и удерживать добычу этими самыми руколапами\n\nМедвежий гибрид с человеческими генами. Обладает повышенным интеллектом, но менее крепкий, если сравнивать его с другими подобными гибридами. Отличаются наличием гипертрофированных подкожных адреналовых желёз, которые могут быть извлечены для получения вещества, схожего с Go-соком.\n\n&lt;color=#E5E54C&gt;Влияние на игровой процесс:&lt;/color&gt; Гуманоидные гибриды будут периодически общаться с поселенцами на разные темы. Это удовлетворяет потребность поселенцев в общении на 10% (так же, как и с другими типами развлечений, их эффективность будет снижаться от повторения). Если используется дополнение Ideology, то идеи в поселении будут влиять и на гуманоидных гибридов.</GR_Bearman.description>
+  <GR_Bearman.tools.0.label>когти на левой руке</GR_Bearman.tools.0.label>
+  <GR_Bearman.tools.1.label>когти на правой руке</GR_Bearman.tools.1.label>
+  <GR_Bearman.tools.3.label>голова</GR_Bearman.tools.3.label>
+
+  <!-- EN:<GR_Bearman.label>bearman</GR_Bearman.label>
   <GR_Bearman.description>A terrifying combination of the raw power of a bear and the intellect of a human, resulting in a creature that loves to abuse its prey. Not quite as strong due to the strange hand-paw shapes, but very energetic and eager to get their victims to catch these hands.\n\nAn ursine hybrid with recessive humanoid genes. Very high intellect but comparatively fragile compared to similar hybrids. Their bodies contain oversized and overstimulated adrenal glands that are found just under the surface of the skin, which can be regularly extracted for a substance analogous to Go-Juice.\n\n&lt;color=#E5E54C&gt;Gameplay effect:&lt;/color&gt; Humanoid hybrids will periodically engage other colonists in conversation, talking about a variety of topics. This increases the social recreation needs of those they interact with by 10% (subject to diminishing returns like all joy types). If using Ideology, humanoid hybrids are subject to precepts.</GR_Bearman.description>
   <GR_Bearman.tools.0.label>left claw</GR_Bearman.tools.0.label>
   <GR_Bearman.tools.1.label>right claw</GR_Bearman.tools.1.label>
-  <GR_Bearman.tools.3.label>head</GR_Bearman.tools.3.label>
+  <GR_Bearman.tools.3.label>head</GR_Bearman.tools.3.label> -->
 
 
 </LanguageData>
