--- a/Common/Languages/Russian/DefInjected/ThingDef/Races_Animal_Rodenthybrids.xml
+++ b/Common/Languages/Russian/DefInjected/ThingDef/Races_Animal_Rodenthybrids.xml
@@ -1,62 +1,92 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
   <!-- Rodent - Bear -->
 
-  <GR_Molebear.label>molebear</GR_Molebear.label>
+  <GR_Molebear.label>кротомедведь</GR_Molebear.label>
+  <GR_Molebear.description>Чересчур независимый, чтобы быть использованным в бою, но без всякого сомнения способен как причинять, так и переносить боль. Наиболее полезен когда предоставлен сам себе, так как преимущественно он выкапывает металлы там, где может их найти. Никто точно не знает, как именно ему это удаётся, возможно дело в его огромных усах.\n\nГибрид грызуна с рецессивными генами медведя. Независимый хищник с медленным метаболизмом и высокой устойчивостью к урону. Отличительной особенностью его поведения является склонность периодически выкапывать различные ценные вещи, преимущественно металлы.\n\n&lt;color=#E5E54C&gt;Влияние на игровой процесс:&lt;/color&gt; Все гибриды грызунов обладают быстрым гестационным периодом, при условии, что в процессе их создания в геноморфере был использован гестационный деблокатор.</GR_Molebear.description>
+  <GR_Molebear.tools.0.label>когти на левой лапе</GR_Molebear.tools.0.label>
+  <GR_Molebear.tools.1.label>когти на правой лапе</GR_Molebear.tools.1.label>
+  <GR_Molebear.tools.3.label>голова</GR_Molebear.tools.3.label>
+  <!-- EN:<GR_Molebear.label>molebear</GR_Molebear.label>
   <GR_Molebear.description>Far too independent to be a combat animal but certainly can both dish out and take pain. Works best in the background, minding its own business and digging up metals it finds. No one is really sure why but it probably has to do with those massive whiskers.\n\nA rodent hybrid with recessive ursine genes. An independent predator with a very low metabolism and high toughness. Has an unusual behaviour where it’ll periodically dig for treasures, typically raw metals.\n\n&lt;color=#E5E54C&gt;Gameplay effect:&lt;/color&gt; All rodent hybrids have fast gestation, as long as a fertility unblocker was used when creating them in the genomorpher.</GR_Molebear.description>
   <GR_Molebear.tools.0.label>left claw</GR_Molebear.tools.0.label>
   <GR_Molebear.tools.1.label>right claw</GR_Molebear.tools.1.label>
-  <GR_Molebear.tools.3.label>head</GR_Molebear.tools.3.label>
+  <GR_Molebear.tools.3.label>head</GR_Molebear.tools.3.label> -->
 
 
   <!-- Rodent - Boomalope -->
 
-  <GR_Squirralope.label>squirralope</GR_Squirralope.label>
+  <GR_Squirralope.label>белкалопа</GR_Squirralope.label>
+  <GR_Squirralope.description>Маленькая милая бомба с взведённым часовым механизмом, которая только и ждёт, чтобы показаться какому-нибудь идиоту вкусной. Да, взрыв не будет сильным, но какая от этого разница, когда он происходит у тебя во рту.\n\nГибрид грызуна с рецессивными генами бумалопы. Небольшой слабый и проворный зверёк, является идеальным решением, если вы ищете компактный способ производства химтоплива. Производит химтопливо более эффективно по сравнению с бумалопой, но нуждается  в ежедневной дойке. \n\n&lt;color=#E5E54C&gt;Влияние на игровой процесс:&lt;/color&gt; Все гибриды грызунов обладают быстрым гестационным периодом, при условии, что в процессе их создания в геноморфере был использован гестационный деблокатор.</GR_Squirralope.description>
+  <GR_Squirralope.tools.0.label>когти на левой лапе</GR_Squirralope.tools.0.label>
+  <GR_Squirralope.tools.1.label>когти на правой лапе</GR_Squirralope.tools.1.label>
+  <GR_Squirralope.tools.3.label>голова</GR_Squirralope.tools.3.label>
+  <!-- EN:<GR_Squirralope.label>squirralope</GR_Squirralope.label>
   <GR_Squirralope.description>It’s small, it’s cute, it’s a ticking time bomb waiting for some idiot to think it looks delicious. It’s not going to be a big explosion, but that doesn’t matter much when it’s in your mouth.\n\nA rodent hybrid with recessive boomalope genes. Small, weak but fast, this hybrid suits those looking for a fuel production method in a small package. Produces chemfuel much more efficiently compared to a boomalope but it needs to be milked every day.\n\n&lt;color=#E5E54C&gt;Gameplay effect:&lt;/color&gt; All rodent hybrids have fast gestation, as long as a fertility unblocker was used when creating them in the genomorpher.</GR_Squirralope.description>
   <GR_Squirralope.tools.0.label>left claw</GR_Squirralope.tools.0.label>
   <GR_Squirralope.tools.1.label>right claw</GR_Squirralope.tools.1.label>
-  <GR_Squirralope.tools.3.label>head</GR_Squirralope.tools.3.label>
+  <GR_Squirralope.tools.3.label>head</GR_Squirralope.tools.3.label> -->
 
 
   <!-- Rabbit - Chicken -->
 
-  <GR_Rabbitchicken.label>rabbitchicken</GR_Rabbitchicken.label>
+  <GR_Rabbitchicken.label>кролекурица</GR_Rabbitchicken.label>
+  <GR_Rabbitchicken.description>Ходят легенды о древнем и жестоком чудовище, о существе столь же омерзительном, сколь и жестоком, что никто из тех, кто с ним вступал в бой не выжил. Это относительно удачная попытка воссоздать нечто похожее, поскольку своим видом этот гибрид внушает ложное чувство безопасности, чем и пользуется, разрывая своей жертве глотку. Так что, думаешь, что тебе повезёт, да\n\nГибрид грызуна с рецессивными генами пернатых. Маленькое, слабое, быстрое существо с непомерным для своих размеров аппетитом. Обладает коротким сроком гестации и 1% шансом моментально убить свою жертву при атаке.\n\n&lt;color=#E5E54C&gt;Влияние на игровой процесс:&lt;/color&gt; Все гибриды грызунов обладают быстрым гестационным периодом, при условии, что в процессе их создания в геноморфере был использован гестационный деблокатор.</GR_Rabbitchicken.description>
+  <GR_Rabbitchicken.tools.1.label>голова</GR_Rabbitchicken.tools.1.label>
+  <!-- EN:<GR_Rabbitchicken.label>rabbitchicken</GR_Rabbitchicken.label>
   <GR_Rabbitchicken.description>Legends say of an ancient and vicious monster, a creature so foul, so cruel that no man yet has fought with it and lived. This was a somewhat successful attempt, as its weakness lulls the enemy into a false sense of security so that it can rip their throat out. So do you feel lucky, punk?\n\nA rodent hybrid with recessive avian genes. A tiny, weak, fast-moving pest with an insane appetite for its size. Incredibly fast gestation period and a 1% chance to instantly kill when attacking.\n\n&lt;color=#E5E54C&gt;Gameplay effect:&lt;/color&gt; All rodent hybrids have fast gestation, as long as a fertility unblocker was used when creating them in the genomorpher.</GR_Rabbitchicken.description>
-  <GR_Rabbitchicken.tools.1.label>head</GR_Rabbitchicken.tools.1.label>
+  <GR_Rabbitchicken.tools.1.label>head</GR_Rabbitchicken.tools.1.label> -->
 
 
   <!-- Rat - Muffalo -->
 
-  <GR_Ratffalo.label>ratffalo</GR_Ratffalo.label>
+  <GR_Ratffalo.label>крысффало</GR_Ratffalo.label>
+  <GR_Ratffalo.description>Интересное вьючное животное, чьи боевые характеристики сравнимы разве что с его склонностью гадить буквально повсюду. И это даже не самое худшее, поскольку эти необычайно большие грызуны являются переносчиками чумы, обладающими полным иммунитетом к заразе. Иногда учёные просто не могут вовремя остановиться.\n\nГибрид грызуна с рецессивными генами муффало. Довольно умные, невероятно смертельные и до жути проворные. Хоть они и травоядные, но благодаря своему неуёмному аппетиту не побрезгуют и трупами. В отличие от других грызунов не могут похвастаться настолько коротким гестационным периодом, но каждый их укус разносит чуму.\n\n&lt;color=#E5E54C&gt;Влияние на игровой процесс:&lt;/color&gt; Все гибриды грызунов обладают быстрым гестационным периодом, при условии, что в процессе их создания в геноморфере был использован гестационный деблокатор.</GR_Ratffalo.description>
+  <GR_Ratffalo.tools.1.label>голова</GR_Ratffalo.tools.1.label>
+  <!-- EN:<GR_Ratffalo.label>ratffalo</GR_Ratffalo.label>
   <GR_Ratffalo.description>An interesting pack animal that packs an incredible punch that also pisses and shits everywhere. That ain’t even the worst part, because these rodents of unusual size are also plague carriers with complete immunity to toxicity. Sometimes scientists just can’t leave well enough alone.\n\nA rodent hybrid with recessive muffalo genes. Quite clever, almost absurdly lethal and quick on its feet. While they are herbivores, they will still happily munch on corpses thanks to their large appetite. Not as short a gestation period compared to other primary rodent hybrids, but every bite transmits the plague.\n\n&lt;color=#E5E54C&gt;Gameplay effect:&lt;/color&gt; All rodent hybrids have fast gestation, as long as a fertility unblocker was used when creating them in the genomorpher.</GR_Ratffalo.description>
-  <GR_Ratffalo.tools.1.label>head</GR_Ratffalo.tools.1.label>
+  <GR_Ratffalo.tools.1.label>head</GR_Ratffalo.tools.1.label> -->
 
 
   <!-- Beaver - Wolf -->
 
-  <GR_Beaverwolf.label>beaverwolf</GR_Beaverwolf.label>
+  <GR_Beaverwolf.label>боброволк</GR_Beaverwolf.label>
+  <GR_Beaverwolf.description>Поразительно быстрый - как физически, так и умственно - охотник, обладающий гиперактивной кастореумной железой, коотрая позволяет им превращать мясо и древесину в овощи. Чисто технически, у веганов не должно с этим возникать проблем, поскольку боброволки, как например пчёлы не поленятся показать вам, что они не хотят, чтобы вы прикасались к их овощам.\n\nГибрид грызуна с рецессивными песьими генами. Очень быстрый, но осторожный хищник, этот гибрид довольно умён и отличается повышенным аппетитом. Может быть на свободном выгуле и не нуждается в загоне, является одновременно и плото- и древоядным. Также они время от времени выделяют что-то похожее на бобровую струю, что пригодно для употребления в пищу, в качестве замены овощей.\n\n&lt;color=#E5E54C&gt;Влияние на игровой процесс:&lt;/color&gt; Все гибриды грызунов обладают быстрым гестационным периодом, при условии, что в процессе их создания в геноморфере был использован гестационный деблокатор.</GR_Beaverwolf.description>
+  <GR_Beaverwolf.tools.0.label>когти на левой лапе</GR_Beaverwolf.tools.0.label>
+  <GR_Beaverwolf.tools.1.label>когти на правой лапе</GR_Beaverwolf.tools.1.label>
+  <GR_Beaverwolf.tools.3.label>голова</GR_Beaverwolf.tools.3.label>
+  <!-- EN:<GR_Beaverwolf.label>beaverwolf</GR_Beaverwolf.label>
   <GR_Beaverwolf.description>An incredibly quick - mentally and physically - hunter with an overactive castoreum gland, effectively allowing them to actively convert meat and trees into vegetables. Technically vegans should be fine with it since, much like bees, it needs to be harvested and the beaverwolf will absolutely let you know if it doesn’t like you touching it.\n\nA rodent hybrid with recessive canine genes. A very quick but cautious predator, this hybrid is both intelligent and frequently looking for its next meal. Able to freely roam and doesn’t require a pen, they are both carnivorous and dendrovorous while also offering daily harvests of castoreum which functions as a vegetable in dishes.\n\n&lt;color=#E5E54C&gt;Gameplay effect:&lt;/color&gt; All rodent hybrids have fast gestation, as long as a fertility unblocker was used when creating them in the genomorpher.</GR_Beaverwolf.description>
   <GR_Beaverwolf.tools.0.label>left claw</GR_Beaverwolf.tools.0.label>
   <GR_Beaverwolf.tools.1.label>right claw</GR_Beaverwolf.tools.1.label>
-  <GR_Beaverwolf.tools.3.label>head</GR_Beaverwolf.tools.3.label>
+  <GR_Beaverwolf.tools.3.label>head</GR_Beaverwolf.tools.3.label> -->
 
 
   <!-- Rabbit - Cat -->
 
-  <GR_Rabbitcat.label>rabbitcat</GR_Rabbitcat.label>
+  <GR_Rabbitcat.label>кроликот</GR_Rabbitcat.label>
+  <GR_Rabbitcat.description>Удивительно крупное и крепкое создание для сочетания из двух достаточно мелких животных. Не знает страха и готово напасть на любого, кого сочтёт пригодным для употребления в пищу. Кто-то считает, что это является попыткой воссоздать Кролика-Убийцу из Кербаннога, ведь кто сказал, что у учёных-генетиков не больное чувство юмора?\n\nГибрид грызуна с рецессивными генами кошачьих. Очень умные, особенно учитывая исходный материал, эти гибриды также быстры, умны, смертельны и обладают врождёнными способностями к регенерации. Также кроликоты отличаются упрямством и нуждаются в регулярной дрессировке. При всём этом они не стесняются выражать свою любовь и привязанность.\n\n&lt;color=#E5E54C&gt;Влияние на игровой процесс:&lt;/color&gt; ак и остальные кошачьи гибриды, они опасны в ближнем бою за счёт способности к уклонению, что делает их идеальным выбором для передовой. Кроме того они будут ластиться к поселенцам, повышая их настроение. Все гибриды грызунов обладают быстрым гестационным периодом, при условии, что в процессе их создания в геноморфере был использован гестационный деблокатор.</GR_Rabbitcat.description>
+  <GR_Rabbitcat.tools.0.label>когти на левой лапе</GR_Rabbitcat.tools.0.label>
+  <GR_Rabbitcat.tools.1.label>когти на правой лапе</GR_Rabbitcat.tools.1.label>
+  <!-- EN:<GR_Rabbitcat.label>rabbitcat</GR_Rabbitcat.label>
   <GR_Rabbitcat.description>For a combination of two relatively small animals, the rabbitcat is fucking massive and has a robust physique. It knows no fear and will tackle anything it wants to eat. Some say this was the other attempt to create the Rabbit of Caerbannog, because who says geneticists don’t have a sick sense of humour.\n\nA rodent hybrid with recessive feline genes. Very intelligent considering the source material, these hybrids are fast, lethal and possess a robust physique with rapid natural regenerative capabilities. Quite stubborn so they require frequent, competent training but they aren’t afraid to show their appreciation.\n\n&lt;color=#E5E54C&gt;Gameplay effect:&lt;/color&gt; Like all cat hybrids, they have an improved melee dodge ability and a short nuzzle period. All rodent hybrids have fast gestation, as long as a fertility unblocker was used when creating them in the genomorpher.</GR_Rabbitcat.description>
   <GR_Rabbitcat.tools.0.label>left claw</GR_Rabbitcat.tools.0.label>
-  <GR_Rabbitcat.tools.1.label>right claw</GR_Rabbitcat.tools.1.label>
+  <GR_Rabbitcat.tools.1.label>right claw</GR_Rabbitcat.tools.1.label> -->
 
 
   <!-- Rodent - Humanoid -->
 
-  <GR_Moleman.label>moleman</GR_Moleman.label>
+  <GR_Moleman.label>кротолюд</GR_Moleman.label>
+  <GR_Moleman.description>Чудовищная громада мышц, которая по-настоящему заботится и всегда радуется возможности усердно работать бок о бок с теми, кого считает семьёй и друзьями. Что неудивительно, зная, что они были специально выведены мегакорпорациями для работы в опасных участках шахт, ведь человеческая жадность никогда не меняется.\n\nГибрид грызуна с рецессивными генами гуманоида. Обладает медленным метаболизмом, и высоким интеллектом, любит копать голыми руками. Будут выполнять приказы по добыче породы, но не отличаясь при этом скоростью, в силу своих размеров.\n\n&lt;color=#E5E54C&gt;Влияние на игровой процесс:&lt;/color&gt;Гуманоидные гибриды будут периодически общаться с поселенцами на разные темы. Это удовлетворяет потребность поселенцев в общении на 10% (так же, как и с другими типами развлечений, их эффективность будет снижаться от повторения). Если используется дополнение Ideology, то идеи в поселении будут влиять и на гуманоидных гибридов. Кротолюды будут периодически подчиняться приказам добычи породы. Это распространяется и на мод Quarry.</GR_Moleman.description>
+  <GR_Moleman.tools.0.label>когти на левой лапе</GR_Moleman.tools.0.label>
+  <GR_Moleman.tools.1.label>когти на правой лапе</GR_Moleman.tools.1.label>
+  <GR_Moleman.tools.3.label>голова</GR_Moleman.tools.3.label>
+  <!-- EN:<GR_Moleman.label>moleman</GR_Moleman.label>
   <GR_Moleman.description>A hulking monstrosity that is genuinely caring for those around them, taking great joy and actual personal pleasure through working diligently and caring for those it considers friends and family. Evidently, it was bred specifically by megacorporations to work in dangerous mines, because human greed never changes.\n\nA rodent hybrid with recessive humanoid genes. Very low hunger rate and very intelligent, these gentle giants enjoy digging with their hands. They will sometimes work mining orders given the chance but they’re very slow due to their bulk.\n\n&lt;color=#E5E54C&gt;Gameplay effect:&lt;/color&gt; Humanoid hybrids will periodically engage other colonists in conversation, talking about a variety of topics. This increases the social recreation needs of those they interact with by 10% (subject to diminishing returns like all joy types). If using Ideology, humanoid hybrids are subject to precepts. Molemen will periodically obey commands to mine. This will also work with the Quarry mod.</GR_Moleman.description>
   <GR_Moleman.tools.0.label>left claw</GR_Moleman.tools.0.label>
   <GR_Moleman.tools.1.label>right claw</GR_Moleman.tools.1.label>
-  <GR_Moleman.tools.3.label>head</GR_Moleman.tools.3.label>
+  <GR_Moleman.tools.3.label>head</GR_Moleman.tools.3.label> -->
 
 
 </LanguageData>
