--- a/Common/Languages/Russian/DefInjected/ThingDef/Effecter_PawnStates.xml
+++ b/Common/Languages/Russian/DefInjected/ThingDef/Effecter_PawnStates.xml
@@ -2,7 +2,7 @@
 <LanguageData>
 
   <GR_FleshFliesGas.label>плотоядные мухи</GR_FleshFliesGas.label>
-  <!-- EN: -->
+  <!-- EN:flesh flies-->
 
 
 </LanguageData>
