--- a/Common/Languages/Russian/DefInjected/ThingDef/Buildings_Security.xml
+++ b/Common/Languages/Russian/DefInjected/ThingDef/Buildings_Security.xml
@@ -3,7 +3,7 @@
 
   <GR_TrapIED_Boom.label>бум-пустульная мина</GR_TrapIED_Boom.label>
   <!-- EN:boom-pustule trap -->
-  <GR_TrapIED_Boom.description>Самодельное взрывное устройство, сделанное из... Впрочем, вам лучше не знать. Не может быть размещено рядом с другими ловушками. В спокойном состоянии животные могут учуять эти мины и будут их обходить. An improvised explosive trap built out of... best if you don't think about it. Cannot be placed adjacent to other traps. Animals can sense these when calm. Less potent than regular high-explosive shell traps.</GR_TrapIED_Boom.description>
+  <GR_TrapIED_Boom.description>Самодельное взрывное устройство, сделанное из... Впрочем, вам лучше не знать. Не может быть размещено рядом с другими ловушками. В спокойном состоянии животные могут учуять эти мины и будут их обходить. Менее смертоносна, нежели другие мины-ловушки.</GR_TrapIED_Boom.description>
   <!-- EN:An improvised explosive trap built out of... best if you don't think about it. Cannot be placed adjacent to other traps. Animals can sense these when calm. Less potent than regular high-explosive shell traps. -->
 
 
